# RegistroEscolar

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md  fase-01-requisitos.md  fase-02-arquitetura.md  fase-03-setup-ambiente.md  fase-04-formularios-dinamicos.md  fase-04-implementacao-inicial.md  fase-04-inscricoes-publicas.md  fase-04-interface-web.md  fase-04-links-publicos.md  fase-04-painel-admin-login.md  fase-04-periodos-letivos.md  fase-04-turmas-vagas.md  fase-04-validacao-operacional-vagas.md
docs/adr/: 0001-monolito-modular.md
docs/runbooks/: deploy-linux.md  localhost.md
src/registro_escolar/: __init__.py  __main__.py  app.py  dependencies.py
src/registro_escolar/api/: __init__.py  router.py
src/registro_escolar/core/: __init__.py  config.py  exceptions.py  logging.py
src/registro_escolar/domain/: __init__.py
src/registro_escolar/infrastructure/: __init__.py
src/registro_escolar/schemas/: academic_terms.py  classes.py  enrollments.py  forms.py  public_links.py  schools.py
src/registro_escolar/services/: academic_terms.py  auth.py  classes.py  enrollments.py  forms.py  public_links.py  schools.py
src/registro_escolar/web/: __init__.py  router.py
tasks/: README.md  task-01-stack-tecnologica-completa.md  task-02-modelagem-banco-dados.md  task-03-estrutura-pastas-projeto.md  task-04-fluxo-configurar-formulario-gerar-link-matricula.md  task-05-requisitos-nao-funcionais.md  task-06-desafios-tecnicos-e-mitigacoes.md
tests/unit/: test_enrollments_service.py  test_forms_service.py  test_public_links_service.py
(+41 files in other folders)
