[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "registro-escolar"
version = "0.1.0"
description = "Backend da plataforma SaaS de matricula online RegistroEscolar."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Lukao" }
]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.8.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
